# arguequery

./: .gitignore  Dockerfile  Dockerfile.nlp  NOTICE.md  README.md  config_example.yml  docker-compose.yml  flake.nix  ontology.yml  pyproject.toml  renovate.json  schemes.yml  settings.toml
.devcontainer/: devcontainer.json  docker-compose.extend.yml
arguequery/: __init__.py  __main__.py  app.py  client.py  config.py  server.py  types.py
arguequery/algorithms/: astar.py  graph2text.py  isomorphism.py
arguequery/cli/: texify.py
arguequery/client/: __main__.py  client.py
arguequery/libs/: infersent.py  ndcg.py  sif.py
arguequery/models/: graph.py  mapping.py  nlp.py  ontology.py  result.py
arguequery/server/: server.py
arguequery/services/: evaluation.py  exporter.py  importer.py  nlp.py  retrieval.py  similarity.py  token_weighter.py  vectorizer.py
data/: .gitignore
data/benchmark/microtexts/: dog2.json  dog3.json  med4.json  media2.json  rent2.json  rent3.json  tuition1.json
data/candidates/microtexts/: death3.json  death4.json  dog4.json  media3.json  media4.json  tuition2.json  tuition3.json
data/case-base/english/microtexts-annotated/: nodeset6362.json  nodeset6366.json  nodeset6370.json  nodeset6372.json  nodeset6375.json  nodeset6378.json  nodeset6382.json  nodeset6384.json  nodeset6385.json  nodeset6387.json  nodeset6389.json  nodeset6390.json  nodeset6391.json  nodeset6393.json  nodeset6394.json  nodeset6396.json  nodeset6398.json  nodeset6399.json  nodeset6400.json  nodeset6401.json  nodeset6403.json  nodeset6409.json  nodeset6412.json  nodeset6413.json  nodeset6414.json  nodeset6415.json  nodeset6419.json  nodeset6421.json  nodeset6425.json  nodeset6426.json  nodeset6427.json  nodeset6429.json  nodeset6431.json  nodeset6432.json  nodeset6433.json  nodeset6435.json  nodeset6436.json  nodeset6437.json  nodeset6438.json  nodeset6440.json  (+13 more)
data/case-base/english/microtexts-plain/: nodeset6362.json  nodeset6365.json  nodeset6372.json  nodeset6376.json  nodeset6379.json  nodeset6398.json  nodeset6399.json  nodeset6401.json  nodeset6413.json  nodeset6422.json  nodeset6424.json  nodeset6425.json  nodeset6427.json  nodeset6429.json  nodeset6433.json  nodeset6434.json  nodeset6435.json  nodeset6444.json  nodeset6458.json  nodeset6459.json  nodeset6467.json
data/cases/english/microtexts-annotated/: nodeset6361.json  nodeset6363.json  nodeset6364.json  nodeset6365.json  nodeset6367.json  nodeset6368.json  nodeset6369.json  nodeset6371.json  nodeset6373.json  nodeset6374.json  nodeset6376.json  nodeset6377.json  nodeset6379.json  (+44 more)
data/rankings/microtexts/: death1.json  death2.json  dog1.json  med1.json  rent1.json
recap_agr/: __main__.py  app.py
recap_agr/cli/: convert.py
recap_agr/libs/: sif.py
recap_agr/models/: mapping.py  nlp.py  ontology.py  result.py
recap_agr/services/: evaluation.py  exporter.py  importer.py  retrieval.py  similarity.py  token_weighter.py  utils.py  vectorizer.py
recap_agr/templates/: index.html
src/arguequery/: __init__.py  __main__.py  model.py  server.py  sim.py
(+52 files in other folders)
