[project]
name = "arguequery"
version = "1.0.0"
description = ""
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
requires-python = ">=3.12"
dependencies = [
    "arg-services>=1,<2",
    "arguebuf>=2,<3",
    "cbrkit[graphs]>=0,<1",
    "nlp-service[all]>=2,<3",
    "pyyaml>=6,<7",
    "typer>=0,<1",
]

[project.scripts]
arguequery = "arguequery.server:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources.cbrkit]
path = "../../wi2trier/cbrkit"
editable = true

[tool.uv.sources.nlp-service]
path = "../nlp-service"
editable = true

[[tool.uv.sources.en-core-web-lg]]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl"
marker = "sys_platform == 'darwin' and platform_machine == 'x86_64'"

[[tool.uv.sources.en-core-web-lg]]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl"
marker = "(sys_platform == 'darwin' and platform_machine == 'arm64') or sys_platform == 'linux'"
