[project]
name = "arguequery"
version = "1.0.0"
description = ""
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
requires-python = ">=3.12"
dependencies = [
    "arg-services>=1,<2",
    "arguebuf>=2,<3",
    "cbrkit[graphs]>=0,<1",
    "nlp-service[all]>=2,<3",
    "pyyaml>=6,<7",
    "typer>=0,<1",
]

[project.scripts]
arguequery = "arguequery.server:app"

[build-system]
requires = ["uv-build>=0.7,<1"]
build-backend = "uv_build"

[tool.uv.sources.cbrkit]
path = "../../wi2trier/cbrkit"
editable = true

[tool.uv.sources.nlp-service]
path = "../nlp-service"
editable = true
